--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -2,7 +2,7 @@
 Theme Name: Prinoz
 Author: gramentheme
 Author URI: https://themeforest.net/user/gramentheme/portfolio
-Description: Prinoz - Printing company & Service Html Template
+Description: Stremker - OTT Platform and Video Streaming HTML Template
 Service Html Template 
 Version: 1.0.0
 */
@@ -58,12 +58,12 @@ Version: 1.0.0
 @import "_project";
 //>> Section <<//
 @import "_section";
-//>> Service <<//
-@import "_Service";
+//>> Tv Shows <<//
+@import "_tv-shows";
 //>> Testimonial <<//
 @import "_testimonial";
-//>> Shop <<//
-@import "_shop";
+//>> Movie <<//
+@import "_movie";
 //>> Shop <<//
 @import "_marquee";
 
